# OptimizingFairnessRemainingBatteryFL

./: .gitignore  LICENSE  README.md  case1.logs  case1.py  case2.logs  case2.py  client.py  environment.yaml  equations.tex  plot_all.sh  problem.py  problem1_2_3_4.py  problem5_6_7_8.py  proxy_solvers.py  random_problems.py  test_proxies.py  wf_solver.py
cases/: case1.py  case2.py  case3.py  case4.py  case5.py
data/: Dockerfile  compose.yaml  config.ini  gen_data.sh  generate_iid_datasets.py
flower/: .env  client.dockerfile  compose.yaml  config_and_run.sh  experiments.sh  fed_client.py  fed_server.py  n_clients.sh  run_experiment.sh  server.dockerfile  specific_run.sh  task.py
install/: install_docker_debian.sh  install_docker_ubuntu.sh
logs/: case1.txt  case2.txt  case2_uniform.txt  case3.txt  case4.txt  case5.txt
plots/: Dockerfile  compose.yaml  plot_all.sh  plot_drop_factor.py  plot_energy_stdev.py  plot_energy_stdev_bad_case.py  plot_round_time.py  plot_solver_time.py  plot_times.py
process_results/: compose.yaml  config_and_run.sh  extract_from_files.py  pipeline.sh  plot_entropy.py  plot_squares.py  process_json.py  results_struct
random_problems/: Dockerfile  compose.yaml  config_and_run.sh  random_problems.py
results_flower/: Dockerfile  config_and_run.sh  guiaraujo.mplstyle
results_random_problems/: Dockerfile  config_and_run.sh
sample_problems/: Dockerfile  compose.yaml  config_and_run.sh  sample_problem.py
wf_solver/: pyproject.toml
wf_solver/wf_solver/: __init__.py  client.py  fl_optimizer.py  proxy_solvers.py  wf_solver.py
(+23 files in other folders)
