[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wf_solver*"]
exclude = [".venv*","__pycache__*"]

[project]
name = "wf_solver"
version = "0.1.0"
description = "Water Filling Solver for Energy Fairness in FL"
authors = [
    {name = "Guilherme Araujo Thomaz", email = "guiaraujo@gta.ufrj.br"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["scipy","numpy"]

[project.urls]
"Homepage" = "https://github.com/GTA-UFRJ/OptimizingFairnessRemainingBatteryFL"